# ray-tracer-challenge

./: .gitignore  CMakeLists.txt  Readme.org  ci_build.sh  install_build_prereqs.sh
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  ClockFace.cpp  ProjectileTracker.cpp  Scene.cpp  SphereSilhouette.cpp
src/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Tuple.cpp  Tuple.h  World.cpp  World.h
test/: CMakeLists.txt  Ch1-test.cpp  Ch2-test.cpp  Ch3-test.cpp  Ch4-test.cpp  Ch5-test.cpp  Ch6-test.cpp  Ch7-Test.cpp  Ch7-test.cpp
